--- a/Smart-Energy/css/homepage.css
+++ b/Smart-Energy/css/homepage.css
@@ -9,10 +9,12 @@ nav {
   background-color: #20712c;
   padding: 10px;
 }
-nav a {
-  color: white;
-  margin: 0 15px;
-  text-decoration: none;
+
+/* Linker navigatie */
+.nav-links {
+    flex: 1;
+    display: flex;
+    gap: 32px;
 }
 nav a:hover {
   text-decoration: underline;
